# scantrix

./: README.md
ark/: Dockerfile  pyproject.toml
ark-node/: .gitignore  Dockerfile  README.md  create-ksplat.js  package-lock.json  package.json  server.js
ark/src/ark/: main.py
splats/: .gitignore  Dockerfile  Dockerfile.colmap  Justfile  README.md  entrypoint.sh  environment-dev.yml  environment.yml
splats/src/: brush.py  dependencies.py  main.py  post_processing.py  utils.py
splats/src/colmap/: colmap.py
splats/src/frame_extraction/: ImageSelector.py  frame_extraction.py  mask.py
splats/tests/: test_main.py
